--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,9 @@ h2{
   font-weight: bold;
 }
 .headlineMinor{
-  color: magenta;
   font-style: italic;
   font-family: fantasy;
+}
+.headlineColor{
+  color: blue;
 }
