--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,18 @@ h2{
 .headlineColor{
   color: blue;
 }
+.siteHeader{
+
+}
+.siteSection1{
+
+}
+.siteSection2{
+
+}
+.siteSection3{
+
+}
+.siteFooter{
+  
+}
