--- a/css/styles2.css
+++ b/css/styles2.css
@@ -89,6 +89,12 @@ body {
     padding: 20px;
   }
 
+  .unified-container {
+    max-width: 98%;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
   .progress-title {
     text-align: center;
     margin-bottom: 20px;
@@ -175,4 +181,3 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
   }
-  
