--- a/css/styles2.css
+++ b/css/styles2.css
@@ -116,7 +116,6 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #d1e5f0;
   }
 
   .coming-soon-title {
@@ -140,7 +139,6 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #d1e5f0;
   }
 
   .migration-title {
@@ -155,7 +153,7 @@ body {
   }
 
   .migration-content {
-    background-color: #ffffff;
+    background-color:#888;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -164,7 +162,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #d1e5f0;
+
   }
 
   .roadmap-title {
@@ -201,6 +199,7 @@ body {
       max-width: 1200px;
       margin: 0 auto;
       padding: 20px;
+      background-color:#888;
     }
 
     .rss-item {
@@ -233,6 +232,7 @@ body {
       max-width: 800px;
       margin: 20px auto;
       padding: 20px;
+      background-color: #888;
     }
 
     .checklist-item {
