--- a/css/styles2.css
+++ b/css/styles2.css
@@ -130,7 +130,7 @@ body {
   }
 
   .coming-soon-content {
-    background-color: #ffffff;
+    background-color: #dbdcdf;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -153,7 +153,7 @@ body {
   }
 
   .migration-content {
-    background-color:#888;
+    background-color:#dbdcdf;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -177,7 +177,7 @@ body {
   }
 
   .roadmap-content {
-    background-color: #ffffff;
+    background-color: #dbdcdf;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
