--- a/css/styles2.css
+++ b/css/styles2.css
@@ -274,3 +274,19 @@ body {
       flex: 1;
       font-size: 16px;
     }
+
+    ul.horizontal-list {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+    }
+
+    ul.horizontal-list li {
+      margin-right: 10px; /* Adjust spacing between list items */
+    }
+	   .checklist-container {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+    }
