added more sections

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -290,3 +290,10 @@ body {
       margin: 20px auto;
       padding: 20px;
     }
+
+    .roadmap-legend-content {
+      background-color:#f5f5f5;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+    }
