--- a/css/styles2.css
+++ b/css/styles2.css
@@ -63,7 +63,7 @@ body {
   }
 
   .coming-soon-section {
-    background-color: #f6f7bb; /* Light gray pastel */
+    background-color: #f6f7bb; /* Light yellow pastel */
     color: #4d4d4d;
   }
 
