--- a/css/styles2.css
+++ b/css/styles2.css
@@ -48,7 +48,7 @@ body {
   }
 
   .m365-section {
-    background-color: #f9b3b3; /* Light red pastel */
+    background-color: #FFB3B3; /* Light red pastel */
     color: #003f5c;
   }
 
@@ -63,7 +63,7 @@ body {
   }
 
   .coming-soon-section {
-    background-color: #f6f7bb; /* Light yellow pastel */
+    background-color: #ffdfc3; /* Light orange pastel */
     color: #4d4d4d;
   }
 
