--- a/css/styles2.css
+++ b/css/styles2.css
@@ -134,6 +134,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    align-items: center;
   }
   .migration-container {
     max-width: 1200px;
