--- a/css/styles2.css
+++ b/css/styles2.css
@@ -135,6 +135,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     align-items: center;
+    text-align: center;
   }
   .migration-container {
     max-width: 1200px;
